--- a/public/index.html
+++ b/public/index.html
@@ -30,5 +30,10 @@
   <body style="margin: 0">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script
+      type="text/javascript"
+      src="https://w327499.yclients.com/widgetJS"
+      charset="UTF-8"
+    ></script>
   </body>
 </html>
