--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <div id="root"></div>
     <script
       type="text/javascript"
-      src="https://w327499.yclients.com/widgetJS"
+      src="//w327499.yclients.com/widgetJS"
       charset="UTF-8"
     ></script>
   </body>
