redize image sizing for games

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Уникальный командный шутер на первой VR Арене в Самаре. Полностью беспроводные технологии Oculus Insight с новейшими очками Oculus Quest"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
