custom booking form

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <script
       type="text/javascript"
       src="//w327499.yclients.com/widgetJS"
-      charset="UTF-8"
+      charset="utf-8"
     ></script>
   </body>
 </html>
