--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2&family=Monda&family=Electrolize&family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
