add new logo and fav

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./public/img/cas_logo_favicon.png"
+    />
+    <link
       rel="stylesheet"
       type="text/css"
       charset="UTF-8"
