add logo for mob

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./public/img/cas_logo_favicon.png"
+      href="./img/cas_logo_favicon.png"
     />
     <link
       rel="stylesheet"
