add g analytics and pause button

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,23 @@
       name="description"
       content="Уникальный командный шутер на первой VR Арене в Самаре. Полностью беспроводные технологии Oculus Insight с новейшими очками Oculus Quest"
     />
+    <meta name="yandex-verification" content="4cdde2a382d9b6e7" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-YZ2YGZD9SZ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-YZ2YGZD9SZ");
+    </script>
     <title>CyberAction Samara</title>
   </head>
   <body style="margin: 0">
